# VoRA

./: .gitignore  README.md  pyproject.toml
configs/: finetuning.yaml  pretrain_I30M_T6M.yaml  pretrain_I8M.yaml  pretrain_debug.yaml
data_module/: _dataset.py  dataset.py  processor.py  sampler.py  vision_transform.py  vqa_processor.py
generation_files/: chat_template.json  processing_vora.py  processor_config.json  tokenizer_config.json
models/: attention_mask.py  aux_vision.py  configuration_vora.py  lora.py  modeling_vora.py  vision_embedding.py  vora_generation_utils.py
tools/: merge_lora.py  parquet2json.py
train/: train.py
utils/: constants.py  logging.py  parser_utils.py  training_utils.py
