[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vora"
version = "0.1.0"
description = "Vision as LoRA"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "torch==2.5.1", "torchvision==0.20.1", "deepspeed==0.16.3",
    "transformers==4.50.3", "tokenizers==0.21.1", "sentencepiece==0.2.0",
    "accelerate==1.6.0", "datasets==3.4.1", "pydantic==2.11.1",
    "bitsandbytes", "wandb", "colorlog", "easydict", "numpy",
]

[project.urls]
"Homepage" = "https://github.com/Hon-Wong/VoRA"

[tool.setuptools.packages.find]
exclude = ["assets*", "generation_files*"]

[tool.wheel]
exclude = ["assets*", "generation_files*"]